# qt-object-measure

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp  qtconfig.qrc  qtquickcontrols2.conf
src/assets/glsl/: shader.frag  shader.vert
src/common/: Colors.h  Common.h  PropertyHelpers.h
src/component/: CvMediaPlayer.cpp  CvMediaPlayer.h  CvMediaPlayerRenderer.cpp  CvMediaPlayerRenderer.h
src/controller/: CvFrameController.cpp  CvFrameController.h  MediaController.cpp  MediaController.h
src/entity/: ContourInfo.h
src/model/: ObjectListModel.cpp  ObjectListModel.h
src/service/: CvBaseService.cpp  CvBaseService.h  GrayService.cpp  GrayService.h  MeasureA4Service.cpp  MeasureA4Service.h  MeasureCoinService.cpp  MeasureCoinService.h  UnDistortService.cpp  UnDistortService.h  WipeOffService.cpp  WipeOffService.h
src/system/: FileHandler.cpp  FileHandler.h  HttpManager.cpp  HttpManager.h  ImageProvider.cpp  ImageProvider.h
src/util/: CvImageUtil.cpp  CvImageUtil.h  CvLineUtil.cpp  CvLineUtil.h  CvPointUtil.cpp  CvPointUtil.h
src/views/: main.qml
src/views/screen/MediaScreen/: MediaOutputPane.qml  MediaScreen.qml  VideoInputSelectPane.qml  VideoInputSettingsPane.qml
src/views/screen/ServiceScreen/: CommonSettings.qml  ServiceScreen.qml
src/views/screen/ServiceScreen/OpenCV/: CalibrateSettings.qml  MeasureSettings.qml
src/views/widget/: ColorHelper.qml  ExpandingSectionButton.qml  FileLoader.qml  FolderLoader.qml  ImageLoaderView.qml  MenuTapBar.qml  MethodsHelpers.qml  SeparatorLine.qml
